BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/CRM_NDGEstero__c.object-meta.xml
<CustomObject>
    <label>NDG Estero</label>
    <nameField>
        <displayFormat>E-{000000000}</displayFormat>
        <label>Nome NDG Estero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDG Estero</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>