BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NDG Estero</relationshipLabel>
    <relationshipName>NDG_Estero</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>