BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/fields/CRM_FormulaNDGEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaNDGEstero__c</fullName>
    <formula>IF (
CRM_Account__r.CRM_NumeroNDGEstero__c &gt; 0, &apos;SI&apos;, &apos;NO&apos;  
)</formula>
    <label>Formula NDGEstero</label>
    <type>Text</type>
</CustomField>