BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/fields/CRM_NDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numero NDG Estero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>