BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/fields/CRM_NDGNumerico__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDGNumerico__c</fullName>
    <formula>VALUE(CRM_NDG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progressivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>