BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/fields/CRM_NumNDGEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_NumNDGEstero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NDG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>