BPER/DEVF/force-app/main/default/objects/CRM_NDGEstero__c/fields/CRM_Stato__c.field-meta.xml
<CustomField>
    <fullName>CRM_Stato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>